package messages;

message ServerRequestPing {
    required string text = 1;
}